--- a/src/style.css
+++ b/src/style.css
@@ -53,11 +53,11 @@
   --fontSize-6: 2.488rem;
   --fontSize-7: 2.986rem;
   --color-primary: #005b99;
-  --color-text: #2e353f;
+  --color-text: #ebebeb;
   --color-text-light: #4f5969;
-  --color-heading: #1a202c;
+  --color-heading: #FA00E9;
   --color-heading-black: black;
-  --color-accent: #d1dce5;
+  --color-accent: #4204BD;
 }
 
 /* HTML elements */
@@ -73,6 +73,7 @@ html {
   font-size: var(--fontSize-root);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #1C1C1C;
 }
 
 body {
@@ -118,7 +119,7 @@ h6 {
 h1 {
   font-weight: var(--fontWeight-black);
   font-size: var(--fontSize-6);
-  color: var(--color-heading-black);
+  color: var(--color-heading);
 }
 
 h2 {
@@ -142,7 +143,7 @@ h6 {
 }
 
 h1 > a {
-  color: inherit;
+  color: var(--color-heading);
   text-decoration: none;
 }
 
@@ -151,8 +152,8 @@ h3 > a,
 h4 > a,
 h5 > a,
 h6 > a {
-  text-decoration: none;
-  color: inherit;
+  text-decoration: underline;
+  color: var(--color-heading);
 }
 
 /* Prose */
@@ -250,6 +251,7 @@ a:focus {
 
 .global-header {
   margin-bottom: var(--spacing-12);
+  text-align: center;
 }
 
 .main-heading {
@@ -287,6 +289,7 @@ a:focus {
 .bio {
   display: flex;
   margin-bottom: var(--spacing-16);
+  justify-content: center;
 }
 
 .bio p {
